--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
 - name: node
 entrypoint: npm
-args: ['install']
+args: ["install"]
 - name: node
 entrypoint: npm
 args: ["run", "create-env"]
