--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,9 @@
 steps:
-- name: node
-entrypoint: npm
+- name: 'node'
+entrypoint: 'npm'
 args: ['install']
-- name: node
-entrypoint: npm
+- name: 'node'
+entrypoint: 'npm'
 args: ["run", "create-env"]
 env:
 - 'SESSION_SERVER=${_SESSION_SERVER}'
