--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,7 @@ steps:
 - name: 'gcr.io/cloud-builders/npm'
 entrypoint: npm
 args: ['install']
-- name: gcr.io/cloud-builders/npm
+- name: 'gcr.io/cloud-builders/npm'
 entrypoint: npm
 args: ["run", "create-env"]
 env:
