--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,7 @@
 steps:
-- name: 'gcr.io/cloud-builders/'
-entrypoint: 'npm'
+- name: 'gcr.io/cloud-builders/npm'
 args: ['install']
-- name: 'gcr.io/cloud-builders/'
-entrypoint: 'npm'
+- name: 'gcr.io/cloud-builders/npm'
 args: ["run", "create-env"]
 env:
 - 'SESSION_SERVER=${_SESSION_SERVER}'
