--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,15 +1,15 @@
 steps:
-- name: node
-  entrypoint: npm
+- name: 'gcr.io/cloud-builders/npm'
+  entrypoint: 'npm'
   args: ['install']
-- name: node
-  entrypoint: npm
-  args: ["run", "create-env"]
+- name: 'node'
+  entrypoint: 'npm'
+  args: ['run', 'create-env']
 env:
 - 'JWT_PRIVATE_KEY=${_JWT_PRIVATE_KEY}'
 - 'JWT_PUBLIC_KEY=${_JWT_PUBLIC_KEY}'
 - 'SESSION_SERVER=${_SESSION_SERVER}'
 - 'UI_SERVER=${_UI_SERVER}'
-- name: "gcr.io/cloud-builders/gcloud"
-args: ["app", "deploy"]
-timeout: "1600s"
+- name: 'gcr.io/cloud-builders/gcloud'
+args: ['app', 'deploy']
+timeout: '1600s'
