--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,8 @@
 steps:
 - name: 'gcr.io/cloud-builders/npm'
   args: ['install']
-- name: 'gcr.io/cloud-builders/npm'
+- name: 'node'
+  entrypoint: 'npm'
   args: ['run', 'create-env']
   env:
   - 'JWT_PRIVATE_KEY=${_JWT_PRIVATE_KEY}'
